# Brazil-Daily-News-Report

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
docs/: SOURCE_REGISTRY.md
src/: pipeline.py  storage.py
src/ai/: client.py  filter.py  prompts.py  reporter.py
src/brazil_daily_news/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  storage.py
src/brazil_daily_news/ai/: client.py  filter.py  prompts.py  reporter.py
src/brazil_daily_news/config/: sources.yaml
src/brazil_daily_news/scraper/: __init__.py  base.py  bcb.py  chinese_media.py  gov_cn.py  govbr.py  hmo.py  http_client.py  ibge.py  mofcom.py  rss.py
src/brazil_daily_news/web/: app.py  tasks.py
src/brazil_daily_news/web/static/: index.html
src/scraper/: ibge.py  json_list.py  mofcom.py
src/web/: app.py  tasks.py
src/web/static/: index.html
