[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brazil-daily-news"
version = "0.1.0"
description = "巴西经贸信息周报自动生成系统"
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
    "requests",
    "beautifulsoup4",
    "lxml",
    "openai>=1.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
brazil-news = "brazil_daily_news.cli:main"

[tool.setuptools.package-dir]
brazil_daily_news = "src"

[tool.setuptools]
packages = [
    "brazil_daily_news",
    "brazil_daily_news.ai",
    "brazil_daily_news.scraper",
    "brazil_daily_news.web",
    "brazil_daily_news.config",
]

[tool.setuptools.package-data]
brazil_daily_news = ["web/static/**", "config/**"]
